--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="pl">
 
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Lista zadań</title>
-   <link rel="stylesheet"
-      href=https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css>
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet">
-   <link href="/style.css" rel="stylesheet">
-   <script defer src="script.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista zadań</title>
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/container.css" rel="stylesheet">
+    <script defer src="script.js"></script>
+  </head>
 
-<body class="body">
-   <div class="container">
+  <body class="body">
+    <div class="container">
       <h1>Lista zadań</h1>
 
       <section class="taskContainer">
-         <h2 class="taskContainer__header">Dodaj nowe zadanie</h2>
+        <h2 class="taskContainer__header">Dodaj nowe zadanie</h2>
 
-         <form class="taskContainer__form js-form">
-            <input class="taskContainer__addTask taskContainer__addTask--long js-newTask"
-               placeholder="Co jest do zrobienia?">
-            <button class="taskContainer__addTask taskContainer__addTask--button">
-               Dodaj zadanie
-            </button>
-         </form>
+        <form class="taskContainer__form js-form">
+          <input class="taskContainer__addTask taskContainer__addTask--long js-newTask"
+            placeholder="Co jest do zrobienia?">
+          <button class="taskContainer__addTask taskContainer__addTask--button js-addTaskButton">
+            Dodaj zadanie
+          </button>
+        </form>
       </section>
 
       <section class="taskContainer">
-         <h2 class="taskContainer__header">Lista zadań</h2>
-         <div class="tasks">
-            <ul class="tasks__list js-tasks">
+        <h2 class="taskContainer__header">Lista zadań</h2>
+        <div class="tasks">
+          <ul class="tasks__list js-tasks">
 
-            </ul>
-         </div>
+          </ul>
+        </div>
       </section>
 
-   </div>
-</body>
+    </div>
+  </body>
 
 </html>
